Fix header link z-index to make clickable

--- a/styles/_headercustom.scss
+++ b/styles/_headercustom.scss
@@ -7,6 +7,7 @@
     .logo {
         display: flex;
         align-items: center;
+        z-index: 3
     }
 
     .logo a {
